--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "loft-taxi-mui-theme": "^1.1.0",
     "mapbox-gl": "^2.6.1",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "web-vitals": "^2.1.2"
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11",
+    "material-ui": "^0.20.2"
   },
   "scripts": {
     "start": "react-scripts start",
